--- a/app/src/main/res/layout/popup_passport_image.xml
+++ b/app/src/main/res/layout/popup_passport_image.xml
@@ -13,7 +13,7 @@
             android:id="@+id/passport_preview_close"
             android:layout_width="wrap_content"
             android:layout_gravity="top|right"
-            android:background="@color/whiteSquareColor"
+            android:background="@color/lightgraySquareColor"
             android:src="@drawable/ic_clear_black_24dp"
             android:tint="@color/redSquareColor"
             />
