--- a/app/src/main/res/layout/fragment_job_details_worker.xml
+++ b/app/src/main/res/layout/fragment_job_details_worker.xml
@@ -79,7 +79,6 @@
 
                 <!-- Reporting to -->
                 <LinearLayout
-                    android:id="@+id/approvedHint"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/black_overlay"
@@ -108,7 +107,6 @@
                     </RelativeLayout>
 
                     <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
-                        android:id="@+id/reportingToTextView"
                         style="@style/caption_dark_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -126,7 +124,6 @@
                         app:josefin_style="bold" />
 
                     <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
-                        android:id="@+id/dateToArriveTextView"
                         style="@style/caption_dark_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -144,7 +141,6 @@
                         app:josefin_style="bold" />
 
                     <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
-                        android:id="@+id/elseToNoteTextView"
                         style="@style/caption_dark_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -152,6 +148,125 @@
                         android:textColor="@color/whiteSquareColor"
                         app:josefin_style="italic" />
                 </LinearLayout>
+
+
+                <!-- Reporting to -->
+                <LinearLayout
+                    android:id="@+id/approvedHint"
+                    android:orientation="vertical"
+                    android:background="@color/darkSquareColor"
+                    android:padding="16dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                            android:text="@string/job_details_reporting_to"
+                            android:layout_marginBottom="6dp"
+                            android:id="@+id/preview_reporting_to"
+                            android:textColor="@android:color/white"
+                            android:textSize="18dp"
+                            android:textStyle="bold"
+                            android:drawablePadding="18dp"
+                            android:layout_alignParentStart="true"
+                            android:layout_alignParentLeft="true"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                        <!-- Message Icon for v2 -->
+                        <View
+                            android:layout_alignParentRight="true"
+                            android:layout_alignParentEnd="true"
+                            android:layout_width="32dp"
+                            android:layout_height="32dp"
+                            android:visibility="gone"
+                            android:background="@drawable/ic_message"/>
+                    </RelativeLayout>
+
+                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                        android:id="@+id/reportingToTextView"
+                        android:textColor="@color/graySquareColor"
+                        android:textSize="16dp"
+                        app:josefin_style="italic"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                        android:id="@+id/reportingToPhoneTextView"
+                        android:textColor="@color/graySquareColor"
+                        android:textSize="16dp"
+                        app:josefin_style="italic"
+                        android:layout_marginTop="2dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <!-- Address to turn up at -->
+                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                        android:text="@string/job_details_turn_up_address"
+                        android:textColor="@android:color/white"
+                        android:textSize="18dp"
+                        android:textStyle="bold"
+                        android:layout_marginBottom="6dp"
+                        android:layout_marginTop="12dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                        android:id="@+id/reportingToAddressTextView"
+                        android:textColor="@color/graySquareColor"
+                        android:textSize="16dp"
+                        app:josefin_style="italic"
+                        android:layout_marginTop="2dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <!-- Date and time to arrive -->
+                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                        android:text="@string/job_details_date_arrival"
+                        android:textColor="@android:color/white"
+                        android:textSize="18dp"
+                        android:textStyle="bold"
+                        android:layout_marginBottom="6dp"
+                        android:layout_marginTop="12dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                        android:id="@+id/dateToArriveTextView"
+                        android:textColor="@color/graySquareColor"
+                        android:textSize="16dp"
+                        app:josefin_style="italic"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <!-- Anything else to note -->
+                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                        android:text="@string/job_details_notes"
+                        android:textColor="@android:color/white"
+                        android:textSize="18dp"
+                        android:textStyle="bold"
+                        android:layout_marginBottom="6dp"
+                        android:layout_marginTop="12dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                        android:id="@+id/elseToNoteTextView"
+                        android:textColor="@color/graySquareColor"
+                        android:textSize="16dp"
+                        app:josefin_style="italic"
+                        android:text="@string/employer_worker_details_bio_placeholder"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+
 
                 <ImageView
                     android:layout_width="match_parent"
@@ -254,16 +369,16 @@
                         android:layout_height="wrap_content" />
                 </LinearLayout>
 
+                <!-- Map -->
                 <fragment
                     android:id="@+id/map_fragment_worker"
                     android:name="com.google.android.gms.maps.SupportMapFragment"
                     android:layout_width="match_parent"
                     android:layout_height="300dp"/>
-
-
             </LinearLayout>
         </ScrollView>
 
+        <!-- Action Button -->
         <Button
             android:id="@+id/btnWorkerFirstStepNext"
             style="@style/BaseButton"
