--- a/app/src/main/res/layout/fragment_job_details_worker.xml
+++ b/app/src/main/res/layout/fragment_job_details_worker.xml
@@ -79,79 +79,6 @@
 
                 <!-- Reporting to -->
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/black_overlay"
-                    android:orientation="vertical"
-                    android:padding="20dp"
-                    android:visibility="gone">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
-                            style="@style/title_dark_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/job_details_reporting_to"
-                            android:textColor="@color/whiteSquareColor"
-                            app:josefin_style="bold" />
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
-                            android:src="@drawable/ic_insert_comment_black_24dp"
-                            android:tint="@color/whiteSquareColor" />
-                    </RelativeLayout>
-
-                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
-                        style="@style/caption_dark_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:textColor="@color/whiteSquareColor"
-                        app:josefin_style="italic" />
-
-                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
-                        style="@style/title_dark_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="14dp"
-                        android:text="@string/job_details_date_arrival"
-                        android:textColor="@color/whiteSquareColor"
-                        app:josefin_style="bold" />
-
-                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
-                        style="@style/caption_dark_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:textColor="@color/whiteSquareColor"
-                        app:josefin_style="italic" />
-
-                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
-                        style="@style/title_dark_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="14dp"
-                        android:text="@string/job_details_notes"
-                        android:textColor="@color/whiteSquareColor"
-                        app:josefin_style="bold" />
-
-                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
-                        style="@style/caption_dark_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:textColor="@color/whiteSquareColor"
-                        app:josefin_style="italic" />
-                </LinearLayout>
-
-
-                <!-- Reporting to -->
-                <LinearLayout
                     android:id="@+id/approvedHint"
                     android:orientation="vertical"
                     android:background="@color/darkSquareColor"
@@ -267,12 +194,6 @@
                 </LinearLayout>
 
 
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="1px"
-                    android:background="@color/graySquareColor" />
-
                 <!-- Info -->
                 <LinearLayout
                     android:orientation="vertical"
@@ -285,49 +206,15 @@
                         android:text="@string/job_description"
                         android:id="@+id/job_details_description_label"
                         android:textSize="16sp"
+                        android:drawablePadding="18dp"
                         android:gravity="center_vertical"
                         android:textColor="@color/blackSquareColor"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
-
                     <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                         android:id="@+id/job_details_description"
-                        android:textSize="12sp"
-                        android:textColor="@color/graySquareColor"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
-
-                    <!-- Skills -->
-                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
-                        android:text="@string/skills_required"
-                        android:id="@+id/job_details_skills_label"
-                        android:textSize="16sp"
-                        android:layout_marginTop="8dp"
-                        android:gravity="center_vertical"
-                        android:textColor="@color/blackSquareColor"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-
-                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
-                        android:id="@+id/job_details_skills"
-                        android:textSize="12sp"
-                        android:textColor="@color/graySquareColor"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
-
-                    <!-- Mandatory Reqs -->
-                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
-                        android:text="@string/job_details_mandatory_requirements"
-                        android:id="@+id/job_details_reqs_label"
-                        android:textSize="16sp"
-                        android:gravity="center_vertical"
-                        android:textColor="@color/blackSquareColor"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-
-                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
-                        android:id="@+id/job_details_qualifications"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
+                        app:josefin_style="italic"
                         android:textColor="@color/graySquareColor"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
@@ -337,33 +224,107 @@
                         android:text="@string/job_details_qualifications"
                         android:id="@+id/job_details_qualifications_label"
                         android:textSize="16sp"
-                        android:visibility="gone"
+                        android:layout_marginTop="12dp"
+                        android:drawablePadding="18dp"
                         android:gravity="center_vertical"
                         android:textColor="@color/blackSquareColor"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
-
                     <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                         android:id="@+id/job_details_qualifications2"
-                        android:textSize="12sp"
-                        android:visibility="gone"
+                        android:textSize="14sp"
+                        app:josefin_style="italic"
                         android:textColor="@color/graySquareColor"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
+
+                    <!-- Requirements -->
+                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                        android:text="@string/job_details_mandatory_requirements"
+                        android:id="@+id/job_details_reqs_label"
+                        android:textSize="16sp"
+                        android:drawablePadding="18dp"
+                        android:gravity="center_vertical"
+                        android:textColor="@color/blackSquareColor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                        android:id="@+id/job_details_qualifications"
+                        android:textSize="14sp"
+                        app:josefin_style="italic"
+                        android:textColor="@color/graySquareColor"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+                    <!-- English Level -->
+                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                        android:text="@string/job_details_english_level"
+                        android:id="@+id/job_details_english_level_label"
+                        android:textSize="16sp"
+                        android:drawablePadding="18dp"
+                        android:gravity="center_vertical"
+                        android:textColor="@color/blackSquareColor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                        android:id="@+id/job_details_english_level"
+                        android:textSize="14sp"
+                        app:josefin_style="italic"
+                        android:textColor="@color/graySquareColor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <!-- Skills -->
+                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                        android:text="@string/skills_required2"
+                        android:id="@+id/job_details_skills_label"
+                        android:textSize="16sp"
+                        android:layout_marginTop="12dp"
+                        android:drawablePadding="18dp"
+                        android:gravity="center_vertical"
+                        android:textColor="@color/blackSquareColor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                        android:id="@+id/job_details_skills"
+                        android:textSize="14sp"
+                        app:josefin_style="italic"
+                        android:textColor="@color/graySquareColor"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
 
                     <!-- Experience Types -->
                     <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                         android:text="@string/job_details_experience_types"
                         android:id="@+id/job_details_experience_types_label"
                         android:textSize="16sp"
+                        android:drawablePadding="18dp"
                         android:gravity="center_vertical"
                         android:textColor="@color/blackSquareColor"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
-
                     <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                         android:id="@+id/job_details_experience_types"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
+                        app:josefin_style="italic"
+                        android:textColor="@color/graySquareColor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <!-- Overtime -->
+                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                        android:text="@string/job_details_overtime"
+                        android:id="@+id/job_details_overtime_label"
+                        android:textSize="16sp"
+                        android:drawablePadding="18dp"
+                        android:gravity="center_vertical"
+                        android:textColor="@color/blackSquareColor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                        android:id="@+id/job_details_overtime"
+                        app:josefin_style="italic"
+                        android:textSize="14sp"
                         android:textColor="@color/graySquareColor"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
