--- a/app/src/main/res/layout/item_job_emp.xml
+++ b/app/src/main/res/layout/item_job_emp.xml
@@ -33,7 +33,6 @@
                     android:textSize="12sp"
                     android:layout_marginTop="14dp"
                     android:layout_marginLeft="14dp"
-                    android:layout_marginBottom="6dp"
                     app:josefin_style="italic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -58,6 +57,7 @@
 
                 <!-- Company Logo -->
                 <ImageView
+                    android:layout_marginTop="14dp"
                     android:scaleType="centerCrop"
                     android:layout_below="@+id/item_job_company_name"
                     android:background="@color/black_overlay"
