--- a/app/src/main/res/layout/item_match.xml
+++ b/app/src/main/res/layout/item_match.xml
@@ -30,7 +30,6 @@
                     android:id="@+id/item_job_company_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="6dp"
                     android:layout_marginLeft="14dp"
                     android:layout_marginTop="14dp"
                     android:textColor="@color/redSquareColor"
@@ -39,6 +38,7 @@
 
                 <!-- Company Logo -->
                 <ImageView
+                    android:layout_marginTop="14dp"
                     android:id="@+id/match_logo"
                     android:layout_width="78dp"
                     android:background="@color/black_overlay"
