--- a/app/src/main/res/layout/item_job_emp.xml
+++ b/app/src/main/res/layout/item_job_emp.xml
@@ -99,7 +99,7 @@
                 <!-- Salary-->
                 <LinearLayout
                     android:id="@+id/sal"
-                    android:layout_below="@+id/item_job_company_name"
+                    android:layout_below="@+id/view_more"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
