--- a/app/src/main/res/layout/map_marker_job.xml
+++ b/app/src/main/res/layout/map_marker_job.xml
@@ -11,6 +11,7 @@
     android:layout_height="400dp">
 
     <RelativeLayout
+        android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -21,6 +22,17 @@
             android:id="@+id/item_match_job"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
+            <!-- Company Name -->
+            <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                android:id="@+id/company_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="14dp"
+                android:layout_marginTop="14dp"
+                android:textColor="@color/redSquareColor"
+                android:textSize="12sp"
+                app:josefin_style="italic" />
 
             <ImageView
                 android:id="@+id/logo"
@@ -65,61 +77,79 @@
                     android:layout_height="wrap_content"/>
             </LinearLayout>
 
-            <!-- Salary-->
             <LinearLayout
-                android:orientation="vertical"
-                android:layout_margin="14dp"
                 android:layout_gravity="bottom|end|right"
+                android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
-                <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
-                    android:id="@+id/period"
-                    android:textSize="16sp"
-                    app:josefin_style="light"
-                    android:textAllCaps="true"
-                    android:textColor="@color/redSquareColor"
+                <!-- Salary-->
+                <LinearLayout
+                    android:id="@+id/salary_layout"
+                    android:orientation="vertical"
+                    android:layout_margin="14dp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content">
 
-                <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
-                    android:id="@+id/salary"
-                    android:textSize="22sp"
-                    android:text="\u00A3 165"
-                    app:josefin_style="light"
-                    android:textAllCaps="true"
-                    android:textColor="@color/redSquareColor"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                        android:id="@+id/period"
+                        android:textSize="16sp"
+                        app:josefin_style="light"
+                        android:textColor="@color/redSquareColor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                        android:id="@+id/salary"
+                        android:textSize="22sp"
+                        android:text="\u00A3 165"
+                        app:josefin_style="light"
+                        android:textAllCaps="true"
+                        android:textColor="@color/redSquareColor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
             </LinearLayout>
+
         </FrameLayout>
 
         <!-- Location and Start Date -->
-        <FrameLayout
+        <RelativeLayout
             android:padding="14dp"
             android:layout_below="@+id/item_match_job"
             android:id="@+id/item_match_start_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                android:id="@+id/job_id"
+                android:textSize="12dp"
+                app:josefin_style="italic"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:textColor="@android:color/holo_green_dark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_centerVertical="true"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical">
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:tint="@color/redSquareColor"
                     android:src="@drawable/ic_date_range_black_24dp"/>
-
                 <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                     android:id="@+id/start_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Starts 18th Feb"
                     android:gravity="center"
+                    android:layout_gravity="center_vertical"
                     style="@style/caption_gray_text"
                     app:josefin_style="light"
                     android:paddingLeft="5dp"
@@ -134,18 +164,18 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginStart="5dp"
                     android:src="@drawable/ic_place_black_24dp"/>
-
                 <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                     android:id="@+id/location"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:layout_gravity="center_vertical"
                     style="@style/caption_gray_text"
                     app:josefin_style="light"
                     android:paddingLeft="5dp"
                     android:paddingStart="5dp"
                     android:text="Holborn, London"/>
             </LinearLayout>
-        </FrameLayout>
+        </RelativeLayout>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
