--- a/app/src/main/res/layout/item_job_emp.xml
+++ b/app/src/main/res/layout/item_job_emp.xml
@@ -20,6 +20,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <ImageView
+                android:id="@+id/banner_cancelled"
+                android:layout_centerInParent="true"
+                android:visibility="gone"
+                android:background="@drawable/banner_cancelled"
+                android:layout_width="300dp"
+                android:layout_height="100dp" />
+
             <!-- Top Block -->
             <RelativeLayout
                 android:id="@+id/item_match_job"
