replaced the cancelled banner

--- a/app/src/main/res/layout/item_job_emp.xml
+++ b/app/src/main/res/layout/item_job_emp.xml
@@ -19,14 +19,15 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
             <ImageView
                 android:id="@+id/banner_cancelled"
-                android:layout_centerInParent="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
                 android:visibility="gone"
                 android:background="@drawable/banner_cancelled"
-                android:layout_width="300dp"
-                android:layout_height="100dp" />
+                android:layout_width="80dp"
+                android:layout_height="80dp" />
 
             <!-- Top Block -->
             <RelativeLayout
