--- a/app/src/main/res/layout/fragment_price_plan.xml
+++ b/app/src/main/res/layout/fragment_price_plan.xml
@@ -108,7 +108,135 @@
                 android:layout_height="wrap_content" />
         </android.support.v7.widget.CardView>
 
+        <!-- Content -->
 
+        <!-- Remaining -->
+        <android.support.v7.widget.CardView
+            app:cardElevation="4dp"
+            android:id="@+id/remaining_display"
+            android:layout_marginRight="12dp"
+            android:layout_marginBottom="12dp"
+            android:layout_marginLeft="12dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                    android:text="Remaining"
+                    android:id="@+id/we"
+                    android:textColor="@color/blackSquareColor"
+                    android:textSize="18sp"
+                    app:josefin_style="italic"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="18dp"
+                    android:layout_marginBottom="18dp"
+                    android:layout_marginTop="18dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                    android:text="(Expires 24/03)"
+                    android:textColor="@color/blackSquareColor"
+                    android:textSize="12sp"
+                    app:josefin_style="italic"
+                    android:layout_toRightOf="@+id/we"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginBottom="18dp"
+                    android:layout_marginTop="18dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                    android:text="49 / 50"
+                    android:textColor="@color/redSquareColor"
+                    android:textSize="24sp"
+                    app:josefin_style="italic"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginRight="18dp"
+                    android:layout_marginBottom="18dp"
+                    android:layout_marginTop="18dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </RelativeLayout>
+
+            <View
+                android:layout_gravity="bottom"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:layout_marginBottom="12dp"
+                android:background="@color/redSquareColor"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"/>
+        </android.support.v7.widget.CardView>
+
+        <!-- Top Up -->
+        <android.support.v7.widget.CardView
+            app:cardElevation="4dp"
+            android:id="@+id/top_up_display"
+            android:layout_marginRight="12dp"
+            android:layout_marginBottom="12dp"
+            android:layout_marginLeft="12dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                    android:text="Top Up"
+                    android:id="@+id/qw"
+                    android:textColor="@color/blackSquareColor"
+                    android:textSize="18sp"
+                    app:josefin_style="italic"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="18dp"
+                    android:layout_marginBottom="18dp"
+                    android:layout_marginTop="18dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                    android:text="(Expires 10/04)"
+                    android:textColor="@color/blackSquareColor"
+                    android:textSize="12sp"
+                    app:josefin_style="italic"
+                    android:layout_toRightOf="@+id/qw"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginBottom="18dp"
+                    android:layout_marginTop="18dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                    android:text="10 / 20"
+                    android:textColor="@color/redSquareColor"
+                    android:textSize="24sp"
+                    app:josefin_style="italic"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginRight="18dp"
+                    android:layout_marginBottom="18dp"
+                    android:layout_marginTop="18dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </RelativeLayout>
+
+            <View
+                android:layout_gravity="bottom"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:layout_marginBottom="12dp"
+                android:background="@color/redSquareColor"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"/>
+        </android.support.v7.widget.CardView>
 
         <!-- Need a top up? -->
         <android.support.v7.widget.CardView
