improvements to the credit card input ui

--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -118,7 +118,8 @@
                     android:inputType="number"
                     android:layout_margin="12dp"
                     android:id="@+id/number"
-                    app:josefin_style="light"
+                    android:maxLength="19"
+                    app:josefin_style="italic"
                     android:paddingBottom="4dp"
                     android:textColor="@color/blackSquareColor"
                     android:layout_width="match_parent"
