--- a/app/src/main/res/layout/map_marker_job.xml
+++ b/app/src/main/res/layout/map_marker_job.xml
@@ -46,7 +46,8 @@
                 android:tint="@color/redSquareColor"
                 android:layout_margin="14dp"
                 android:layout_width="32dp"
-                android:layout_height="32dp"/>
+                android:layout_height="32dp"
+                android:visibility="gone"/>
 
             <!-- Occupation + experience -->
             <LinearLayout
