--- a/app/src/main/res/layout/fragment_alternative_pay.xml
+++ b/app/src/main/res/layout/fragment_alternative_pay.xml
@@ -34,6 +34,7 @@
             <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                 android:text="@string/payments_alt_spinner_title"
                 android:textSize="16sp"
+                app:josefin_style="light"
                 android:layout_margin="24dp"
                 android:textColor="@color/blackSquareColor"
                 android:layout_width="wrap_content"
@@ -65,6 +66,7 @@
                 <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                     android:text="@string/payments_alt_name"
                     android:textSize="16sp"
+                    app:josefin_style="light"
                     android:id="@+id/name_title"
                     android:layout_marginTop="24dp"
                     android:layout_margin="24dp"
@@ -76,7 +78,8 @@
                 <com.hellobaytree.graftrs.shared.view.widget.JosefinSansEditText
                     android:id="@+id/alt_pay_name_input"
                     android:layout_marginLeft="24dp"
-                    android:layout_marginTop="4dp"
+                    app:josefin_style="light"
+                    android:inputType="textNoSuggestions"
                     android:layout_marginBottom="24dp"
                     android:layout_marginRight="24dp"
                     android:textColor="@color/blackSquareColor"
@@ -102,6 +105,7 @@
                 <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                     android:text="@string/payments_alt_email"
                     android:textSize="16sp"
+                    app:josefin_style="light"
                     android:id="@+id/email_title"
                     android:layout_marginTop="24dp"
                     android:layout_margin="24dp"
@@ -113,7 +117,8 @@
                 <com.hellobaytree.graftrs.shared.view.widget.JosefinSansEditText
                     android:id="@+id/alt_pay_email_input"
                     android:layout_marginLeft="24dp"
-                    android:layout_marginTop="4dp"
+                    app:josefin_style="light"
+                    android:inputType="textNoSuggestions"
                     android:layout_marginBottom="24dp"
                     android:layout_marginRight="24dp"
                     android:textColor="@color/blackSquareColor"
@@ -142,6 +147,7 @@
                     android:id="@+id/order_title"
                     android:layout_marginTop="24dp"
                     android:layout_margin="24dp"
+                    app:josefin_style="light"
                     android:layout_marginLeft="24dp"
                     android:textColor="@color/blackSquareColor"
                     android:layout_width="wrap_content"
@@ -150,7 +156,8 @@
                 <com.hellobaytree.graftrs.shared.view.widget.JosefinSansEditText
                     android:id="@+id/alt_pay_order_input"
                     android:layout_marginLeft="24dp"
-                    android:layout_marginTop="4dp"
+                    app:josefin_style="light"
+                    android:inputType="textNoSuggestions"
                     android:layout_marginBottom="24dp"
                     android:layout_marginRight="24dp"
                     android:textColor="@color/blackSquareColor"
@@ -159,6 +166,7 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
+        <!-- Action Button and Notes -->
         <LinearLayout
             android:layout_below="@+id/alt_pay_order"
             android:orientation="vertical"
